Bug 463261 - endcap of the buttons & shadows of buttons on the bookmark toolbar are not properly aligned. r=gavin
UltraBlame original commit: 5fcc930b0518a8d56000646384645cf63fa80af5

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1082,9 +1082,6 @@ margin
 padding
 :
 0
-0
-1px
-0
 ;
 -
 moz
@@ -1534,7 +1531,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1720,7 +1717,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1805,7 +1802,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -2069,7 +2066,7 @@ no
 -
 repeat
 right
-center
+top
 !
 important
 ;
@@ -2106,32 +2103,6 @@ margin
 display
 :
 none
-!
-important
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
-.
-toolbarbutton
--
-text
-{
-font
--
-size
-:
-100
-%
-!
-important
-;
-margin
-:
-0px
 !
 important
 ;
